<!--
  ~ /*
  ~ *  Created Aakarshak on 19/12/20 9:29 PM
  ~ *  Copyright Ⓒ 2020. All rights reserved Ⓒ 2020
  ~ *  Last modified: 19/12/20 8:06 PM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<resources>
    <string name="app_name">Backup Restore</string>
    <string name="backup">BACKUP</string>
    <string name="app_image">App image</string>
    <string name="chandigarh_university">CHANDIGARH UNIVERSITY</string>
    <string name="quote">When you get knocked down, you got to get backup. Otherwise, you are going to lose</string>
    <string name="rate_us">RATE US</string>
    <string name="share">SHARE</string>
    <string name="donate">DONATE</string>
    <string name="sort">Apps are sorted by NAME</string>
    <string name="todo">TODO</string>
    <string name="app_name_apk">APP NAME</string>
</resources>
