<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~ *  Created Aakarshak on 19/12/20 9:29 PM
  ~ *  Copyright Ⓒ 2020. All rights reserved Ⓒ 2020
  ~ *  Last modified: 19/12/20 9:29 PM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/quote"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="rateUs"
            android:padding="10dp"

            android:text="@string/rate_us"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimary"
            android:onClick="shareApp"
            android:padding="10dp"
            android:text="@string/share"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimary"
            android:onClick="donate"
            android:padding="10dp"
            android:text="@string/donate"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sort"
        android:textColor="@color/colorBlack" />

</LinearLayout>
